--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -736,7 +736,7 @@
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded wow zoomIn" 
-                            data-wow-delay="0.9s" src="img/about.jpg" style="object-fit: cover;" alt="من نحن">
+                            data-wow-delay="0.9s" src="{% static 'img/about.jpg' %}" style="object-fit: cover;" alt="من نحن">
                     </div>
                 </div>
 
@@ -785,7 +785,7 @@
                 <div class="col-lg-4 wow zoomIn" data-wow-delay="0.9s" style="min-height: 350px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute w-100 h-100 rounded wow zoomIn" 
-                            data-wow-delay="0.1s" src="img/feature.jpg" 
+                            data-wow-delay="0.1s" src="{% static 'img/feature.jpg' %}" 
                             style="object-fit: cover;" alt="مميزاتنا">
                     </div>
                 </div>
@@ -1086,7 +1086,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.png" alt="">
+                            <img class="img-fluid w-100" src="{% static 'img/team-1.png' %}" alt="">
                             <div class="team-social">
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -1103,7 +1103,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.png" alt="">
+                            <img class="img-fluid w-100" src="{% static 'img/team-1.png' %}" alt="">
                             <div class="team-social">
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -1120,7 +1120,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                     <div class="team-item bg-light rounded overflow-hidden">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.png" alt="">
+                            <img class="img-fluid w-100" src="{% static 'img/team-1.png' %}" alt="">
                             <div class="team-social">
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
                                 <a class="btn btn-lg btn-warning btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
@@ -1151,7 +1151,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                            <img class="img-fluid" src="{% static 'img/blog-1.jpg' %}" alt="">
                             <a class="position-absolute top-0 end-0 bg-warning text-white rounded-start mt-5 py-2 px-4" href="">تصميم مواقع</a>
                         </div>
                         <div class="p-4 text-end">
@@ -1168,7 +1168,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/blog-2.jpg" alt="">
+                            <img class="img-fluid" src="{% static 'img/blog-2.jpg' %}" alt="">
                             <a class="position-absolute top-0 end-0 bg-warning text-white rounded-start mt-5 py-2 px-4" href="">برمجة</a>
                         </div>
                         <div class="p-4 text-end">
