--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -22,8 +22,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المدونة</a>
                         <div class="dropdown-menu m-0 text-end">
-                            <a href="blog.html" class="dropdown-item">شبكة المدونة</a>
-                            <a href="detail.html" class="dropdown-item">تفاصيل المدونة</a>
+                            <a href="{% url 'blog:blog_home' %}" class="dropdown-item">شبكة المدونة</a>
+                            <a href="#" class="dropdown-item">تفاصيل المدونة</a>
                         </div>
                     </div>
 
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <a href="contact.html" class="nav-item nav-link">اتصل بنا</a>
+                    <a href="{% url 'contact:contact_home' %}" class="nav-item nav-link">اتصل بنا</a>
                 </div>
                 
                 <div class="d-flex align-items-center">
@@ -98,8 +98,8 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blog</a>
                         <div class="dropdown-menu m-0">
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                            <a href="detail.html" class="dropdown-item">Blog Detail</a>
+                            <a href="{% url 'blog:blog_home' %}" class="dropdown-item">Blog Grid</a>
+                            <a href="#" class="dropdown-item">Blog Detail</a>
                         </div>
                     </div>
 
@@ -139,7 +139,7 @@
                             <a href="quote.html" class="dropdown-item">Free Quote</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="{% url 'contact:contact_home' %}" class="nav-item nav-link">Contact</a>
                 </div>
                 <button type="button" class="btn text-warning ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></button>
               <!-- زر وضع الظلام -->
