--- a/contact/templates/contact_home.html
+++ b/contact/templates/contact_home.html
@@ -4,16 +4,16 @@
 
 {% block content_en %}
 
-        <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
-            <div class="row py-5">
-                <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-                    <h1 class="display-4 text-white animated zoomIn">Contact Us</h1>
-                    <a href="{% url 'core:home' %}" class="h5 text-white">Home</a>
-                    <i class="far fa-circle text-white px-2"></i>
-                    <a href="{% url 'contact:contact_home' %}" class="h5 text-white">Contact</a>
-                </div>
+    <div class="container-fluid bg-primary py-5 bg-header" style="margin-bottom: 90px;">
+        <div class="row py-5">
+            <div class="col-12 pt-lg-5 mt-lg-5 text-center">
+                <h1 class="display-4 text-white animated zoomIn">Contact Us</h1>
+                <a href="{% url 'core:home' %}" class="h5 text-white">Home</a>
+                <i class="far fa-circle text-white px-2"></i>
+                <a href="{% url 'contact:contact_home' %}" class="h5 text-white">Contact</a>
             </div>
         </div>
+    </div>
 
     <!-- Contact Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -30,7 +30,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Call to ask any question</h5>
-                            <h4 class="text-primary mb-0">+012 345 6789</h4>
+                            <h4 class="text-primary mb-0">+{{ info_contact.phone_contact }}</h4>
                         </div>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Email to get free quote</h5>
-                            <h4 class="text-primary mb-0">info@example.com</h4>
+                            <h4 class="text-primary mb-0">{{ info_contact.email_contact }}</h4>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Visit our office</h5>
-                            <h4 class="text-primary mb-0">123 Street, NY, USA</h4>
+                            <h4 class="text-primary mb-0">{{ info_contact.location_contact }}</h4>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
                     <iframe class="position-relative rounded w-100 h-100"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                        src="{{ info_contact.iframe_map_contact }}"
                         frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
                 </div>
@@ -142,7 +142,6 @@
 </div>
 <!-- بحث ملء الشاشة ينتهي -->
 
-
 <!-- تواصل معنا يبدأ -->
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
     <div class="container py-5">
@@ -158,7 +157,7 @@
                     </div>
                     <div class="pe-4">
                         <h5 class="mb-2">اتصل لطرح أي سؤال</h5>
-                        <h4 class="text-primary mb-0">+012 345 6789</h4>
+                        <h4 class="text-primary mb-0">{{ info_contact.phone_contact }}</h4>
                     </div>
                 </div>
             </div>
@@ -169,7 +168,7 @@
                     </div>
                     <div class="pe-4">
                         <h5 class="mb-2">أرسل بريد للحصول على عرض مجاني</h5>
-                        <h4 class="text-primary mb-0">info@example.com</h4>
+                        <h4 class="text-primary mb-0">{{ info_contact.email_contact }}</h4>
                     </div>
                 </div>
             </div>
@@ -180,7 +179,7 @@
                     </div>
                     <div class="pe-4">
                         <h5 class="mb-2">زور مكتبنا</h5>
-                        <h4 class="text-primary mb-0">123 شارع، نيويورك، أمريكا</h4>
+                        <h4 class="text-primary mb-0">{{ info_contact.location_contact }}</h4>
                     </div>
                 </div>
             </div>
@@ -209,7 +208,7 @@
             </div>
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
                 <iframe class="position-relative rounded w-100 h-100"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                    src="{{ info_contact.iframe_map_contact }}"
                     frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
             </div>
@@ -217,7 +216,6 @@
     </div>
 </div>
 <!-- تواصل معنا ينتهي -->
-
 
 <!-- شركاؤنا يبدأ -->
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
