--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -13,7 +13,7 @@
                         <h5 class="text-white text-uppercase mb-3 animated slideInDown">Creative & Innovative</h5>
                         <h1 class="display-1 text-white mb-md-4 animated zoomIn">Creative & Innovative Digital Solution</h1>
                         <a href="quote.html" class="btn btn-warning py-md-3 px-md-5 me-3 animated slideInLeft">Free Quote</a>
-                        <a href="" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                        <a href="{% url 'contact:contact_home' %}" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -129,10 +129,10 @@
                         </div>
                         <div class="ps-4">
                             <h5 class="mb-2">Call to ask any question</h5>
-                            <h4 class="text-warning mb-0">+012 345 6789</h4>
+                            <h4 class="text-warning mb-0">{{ info_contact.phone_contact }}</h4>
                         </div>
                     </div>
-                    <a href="quote.html" class="btn btn-warning py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Quote</a>
+                    <a href="{% url 'contact:contact_home' %}" class="btn btn-warning py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Request A Quote</a>
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
@@ -272,7 +272,7 @@
                     <div class="position-relative bg-warning rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">Call Us For Quote</h3>
                         <p class="text-white mb-3">Clita ipsum magna kasd rebum at ipsum amet dolor justo dolor est magna stet eirmod</p>
-                        <h2 class="text-white mb-0">+012 345 6789</h2>
+                        <h2 class="text-white mb-0">+0{{ info_contact.phone_contact }}</h2>
                     </div>
                 </div>
             </div>
@@ -353,67 +353,8 @@
 
 
     <!-- Quote Start -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-7">
-                    <div class="section-title position-relative pb-3 mb-5">
-                        <h5 class="fw-bold text-warning text-uppercase">Request A Quote</h5>
-                        <h1 class="mb-0">Need A Free Quote? Please Feel Free to Contact Us</h1>
-                    </div>
-                    <div class="row gx-3">
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
-                            <h5 class="mb-4"><i class="fa fa-reply text-warning me-3"></i>Reply within 24 hours</h5>
-                        </div>
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                            <h5 class="mb-4"><i class="fa fa-phone-alt text-warning me-3"></i>24 hrs telephone support</h5>
-                        </div>
-                    </div>
-                    <p class="mb-4">Eirmod sed tempor lorem ut dolores. Aliquyam sit sadipscing kasd ipsum. Dolor ea et dolore et at sea ea at dolor, justo ipsum duo rebum sea invidunt voluptua. Eos vero eos vero ea et dolore eirmod et. Dolores diam duo invidunt lorem. Elitr ut dolores magna sit. Sea dolore sanctus sed et. Takimata takimata sanctus sed.</p>
-                    <div class="d-flex align-items-center mt-2 wow zoomIn" data-wow-delay="0.6s">
-                        <div class="bg-warning d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                            <i class="fa fa-phone-alt text-white"></i>
-                        </div>
-                        <div class="ps-4">
-                            <h5 class="mb-2">Call to ask any question</h5>
-                            <h4 class="text-warning mb-0">+012 345 6789</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5">
-                    <div class="bg-warning rounded h-100 d-flex align-items-center p-5 wow zoomIn" data-wow-delay="0.9s">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-xl-12">
-                                    <input type="text" class="form-control bg-light border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="form-control bg-light border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <select class="form-select bg-light border-0" style="height: 55px;">
-                                        <option selected>Select A Service</option>
-                                        <option value="1">Service 1</option>
-                                        <option value="2">Service 2</option>
-                                        <option value="3">Service 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-light border-0" rows="3" placeholder="Message"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">Request A Quote</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "contact_main_en.html" %}
     <!-- Quote End -->
-
-
 
     <!-- Team Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -564,7 +505,7 @@
         </div>
     </div>
     <!-- Vendor End -->
-    
+
 {% endblock content_en %}
 
 {% block content_ar %}
@@ -582,7 +523,7 @@
                         <h1 class="display-5 fw-bold text-white mb-md-4 animated zoomIn">حلول رقمية مبتكرة لتطوير أعمالك</h1>
                         <div class="d-flex justify-content-center flex-wrap gap-2">
                             <a href="quote.html" class="btn btn-warning py-2 px-4 animated slideInRight">اطلب عرض سعر</a>
-                            <a href="contact.html" class="btn btn-outline-light py-2 px-4 animated slideInLeft">اتصل بنا</a>
+                            <a href="{% url 'contact:contact_home' %}" class="btn btn-outline-light py-2 px-4 animated slideInLeft">اتصل بنا</a>
                         </div>
                     </div>
                 </div>
@@ -722,12 +663,12 @@
                         </div>
                         <div class="pe-4">
                             <h5 class="mb-2">اتصل لطرح أي سؤال</h5>
-                            <h4 class="text-warning mb-0">+012 345 6789</h4>
+                            <h4 class="text-warning mb-0">{{ info_contact.phone_contact }}</h4>
                         </div>
                     </div>
 
                     <!-- زر -->
-                    <a href="quote.html" class="btn btn-warning py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">
+                    <a href="{% url 'contact:contact_home' %}" class="btn btn-warning py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">
                         اطلب عرض سعر
                     </a>
                 </div>
@@ -822,7 +763,6 @@
     </div>
     <!-- ميزات End -->
 
-
     <!-- خدماتنا Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
         <div class="container py-5">
@@ -907,7 +847,7 @@
                     <div class="position-relative bg-warning rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">اتصل بنا لطلب عرض سعر</h3>
                         <p class="text-white mb-3">فريقنا جاهز لتقديم أفضل الحلول التقنية التي تناسب عملك.</p>
-                        <h2 class="text-white mb-0">+012 345 6789</h2>
+                        <h2 class="text-white mb-0">+0{{ info_contact.phone_contact }}</h2>
                     </div>
                 </div>
 
@@ -915,7 +855,6 @@
         </div>
     </div>
     <!-- خدماتنا End -->
-
 
     <!--  خطط الأسعارStart -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
@@ -1007,72 +946,8 @@
     </div>
     <!-- Pricing Plan End -->
 
-
     <!-- الاسئلة الشائعة  -->
-    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
-        <div class="container py-5">
-            <div class="row g-5">
-                <!-- النص -->
-                <div class="col-lg-7">
-                    <div class="section-title position-relative pb-3 mb-5 text-end">
-                        <h5 class="fw-bold text-warning text-uppercase">اطلب عرض سعر</h5>
-                        <h1 class="mb-0">هل تحتاج إلى عرض سعر مجاني؟ لا تتردد في التواصل معنا</h1>
-                    </div>
-                    <div class="row gx-3">
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
-                            <h5 class="mb-4"><i class="fa fa-reply text-warning ms-3"></i> الرد خلال 24 ساعة</h5>
-                        </div>
-                        <div class="col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                            <h5 class="mb-4"><i class="fa fa-phone-alt text-warning ms-3"></i> دعم هاتفي على مدار الساعة</h5>
-                        </div>
-                    </div>
-                    <p class="mb-4">
-                        نحن هنا لمساعدتك دائمًا، سواء كنت بحاجة إلى استشارة أو تريد معرفة أسعار خدماتنا. 
-                        تواصل معنا وسنقدم لك عرض سعر مفصل يناسب احتياجاتك بأفضل جودة وأفضل الأسعار.
-                    </p>
-                    <div class="d-flex align-items-center mt-2 wow zoomIn" data-wow-delay="0.6s">
-                        <div class="bg-warning d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                            <i class="fa fa-phone-alt text-white"></i>
-                        </div>
-                        <div class="pe-4 text-end">
-                            <h5 class="mb-2">اتصل لطرح أي سؤال</h5>
-                            <h4 class="text-warning mb-0">+012 345 6789</h4>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- النموذج -->
-                <div class="col-lg-5">
-                    <div class="bg-warning rounded h-100 d-flex align-items-center p-5 wow zoomIn" data-wow-delay="0.9s">
-                        <form class="w-100">
-                            <div class="row g-3">
-                                <div class="col-12">
-                                    <input type="text" class="form-control bg-light border-0 text-end" placeholder="اسمك" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <input type="email" class="form-control bg-light border-0 text-end" placeholder="بريدك الإلكتروني" style="height: 55px;">
-                                </div>
-                                <div class="col-12">
-                                    <select class="form-select bg-light border-0 text-end" style="height: 55px;">
-                                        <option selected>اختر خدمة</option>
-                                        <option value="1">خدمة 1</option>
-                                        <option value="2">خدمة 2</option>
-                                        <option value="3">خدمة 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control bg-light border-0 text-end" rows="3" placeholder="رسالتك"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-dark w-100 py-3" type="submit">اطلب عرض سعر</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "contact_main_ar.html" %}
     <!-- الاسئلة الشائعة End -->
 
     <!-- الفريق Start -->
@@ -1139,7 +1014,6 @@
     </div>
     <!-- Team End -->
 
- 
     <!-- Blog Start -->
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" dir="rtl">
         <div class="container py-5">
