--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -5,11 +5,11 @@
     <!-- شريط التنقل والكاروصل بداية -->
     <div class="container-fluid position-relative p-0" dir="rtl">
         <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
-            <a href="{% url 'core:home' %}" class="navbar-brand p-0">
                 <h1 class="m-0">
-                    <img src="{% static 'img/2-textcode.png' %}" alt="الشعار" style="width: 30%; height: 100%;">
+                    <a href="{% url 'core:home' %}" class="navbar-brand p-0">
+                      <img src="{% static 'img/2-textcode.png' %}" alt="الشعار" style="width: 30%; height: 100%;">
+                    </a>
                 </h1>
-            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
@@ -84,9 +84,11 @@
     <!-- Navbar & Carousel Start -->
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-dark px-5 py-3 py-lg-0">
-            <a href="{% url 'core:home' %}" class="navbar-brand p-0">
-                <h1 class="m-0"><img src="{% static 'img/1-textcode.png' %}" alt="Logo" style="width: 30%; height: 100%;"></h1>
-            </a>
+                <h1 class="m-0">
+                    <a href="{% url 'core:home' %}" class="navbar-brand p-0">
+                        <img src="{% static 'img/1-textcode.png' %}" alt="Logo" style="width: 30%; height: 100%;">
+                    </a>
+                </h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
             </button>
