--- a/templates/parts/topbar.html
+++ b/templates/parts/topbar.html
@@ -7,16 +7,16 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-end mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt ms-2"></i>١٢٣ شارع، نيويورك، الولايات المتحدة</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt ms-2"></i>+٠١٢ ٣٤٥ ٦٧٨٩</small>
-                    <small class="text-light"><i class="fa fa-envelope-open ms-2"></i>info@example.com</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt ms-2"></i>{{ info_contact.location_contact }}</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt ms-2"></i>{{ info_contact.phone_contact }}</small>
+                    <small class="text-light"><i class="fa fa-envelope-open ms-2"></i>{{ info_contact.email_contact }}</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-start">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle ms-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle ms-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle ms-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
+                    {% for social in social_media_contacts %}
+                        <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="{{ social.url }}"><i class="fab {{ social.icon_name }} fw-normal"></i></a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -29,16 +29,16 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>{{ info_contact.location_contact }}</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>{{ info_contact.phone_contact }}</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>{{ info_contact.email_contact }}</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
+                    {% for social in social_media_contacts %}
+                        <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="{{ social.url }}"><i class="fab {{ social.icon_name }} fw-normal"></i></a>
+                    {% endfor %}
                 </div>
             </div>
         </div>
