--- a/templates/parts/topbar.html
+++ b/templates/parts/topbar.html
@@ -8,7 +8,7 @@
             <div class="col-lg-8 text-center text-lg-end mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt ms-2"></i>{{ info_contact.location_contact }}</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt ms-2"></i>{{ info_contact.phone_contact }}</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt ms-2"></i>+0{{ info_contact.phone_contact }}</small>
                     <small class="text-light"><i class="fa fa-envelope-open ms-2"></i>{{ info_contact.email_contact }}</small>
                 </div>
             </div>
